--- a/style.css
+++ b/style.css
@@ -167,16 +167,16 @@ body.active {
 /*--- Header ---*/
 .header {
   padding-block: 15px;
-  position: center;
-  top: 5;
-  left: 0;
+  position: centre;
+  top: 20;
+  left: 10;
   width: 100%;
   transition: var(--transition-1);
-  z-index: 4;
+  z-index: 5;
 }
 
 .header.active {
-  padding-block: 12px;
+  padding-block: 15px;
   background: var(--bg-secondary);
   box-shadow: var(--shadow-1);
 }
