--- a/style.css
+++ b/style.css
@@ -129,20 +129,222 @@ ion-icon {
   background: var(--color-primary);
   color: var(--bg-primary);
 }
+body {
+    margin: 0;
+    font-size: 104%;
+    background: #fff;
+    font-family: 'Raleway', sans-serif;
+    scroll-behavior: smooth;
+}
+
+body a {
+    text-decoration: none;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+}
+
+a:link {
+    color: #06004b;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #ff4c4c;
+    text-decoration: none;
+}
+
+input[type="button"],
+input[type="submit"],
+input[type="text"],
+input[type="email"],
+input[type="search"] {
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+p {
+    font-size: 0.9em;
+    color: #000000;
+    line-height: 1.9em;
+    letter-spacing: 1px;
+    margin-bottom: 0;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+
+.breadcrumb,
+ol {
+    margin-bottom: 0 !important;
+}
+
+/*--/banner --*/
+
+.main-banner {
+    background: url(../images/banner3.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
+    position: relative;
+    min-height: 100vh;
+}
+
+.banner-info {
+    padding-top: 9em;
+}
+
+.lavi-logo a {
+    display: initial;
+    margin: 0;
+    letter-spacing: 1px;
+    color: #000000;
+    font-size: 1em;
+    font-weight: 700;
+    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
+    text-transform: uppercase;
+}
+
+/*--//banner --*/
+/*--/content --*/
+img.admin {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background: #dff0f738;
+    padding: 0.3em;
+    margin-bottom: 1em;
+}
+
+.inner-vv-wrap h2,
+.head-vl {
+    color: #000000;
+    font-size: 1.4em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
+    margin: 0em 0 1.5em 0;
+}
+
+.inner-vv-wrap h4 {
+    color: #000000;
+    font-size: 1em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
+    margin: 0.5em 0 3em 0;
+}
+
+
+/*--//content --*/
+/*--/tab-content --*/
+.tab-main {
+    padding: 40px 0;
+    border: none;
+    background: transparent;
+    box-shadow: none;
+    width: 80%;
+    text-align: center;
+}
+
+.inner-vv-wrap {
+    margin: 0 auto;
+    width: 55%;
+    padding-top: 4em;
+    text-align: center;
+
+}
+
+.tab-main section {
+    display: none;
+}
+
+.tab-main input.vv-sm {
+    display: none;
+}
+
+
+
+.tab-main label {
+    display: inline-block;
+    padding: 10px 25px;
+    font-weight: 600;
+    text-align: center;
+    color: #595a5a;
+    border: 2px solid #ffffff47;
+    border-radius: 4px;
+    background: #fff;
+    margin: 0 2px;
+    font-size: 0.9em;
+    letter-spacing: 1px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.tab-main span {
+    margin-right: 0.5em;
+}
+
+
+
+
+
+@media screen and (max-width: 800px) {
+    .tab-main label:before {
+        margin: 0;
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .tab-main label {
+        padding: 15px;
+    }
+}
+
+/*--//tab-content --*/
+/*-- /gallery --*/
+h4.sub-title.two {
+    color: #fd0;
+}
+
+.gal-img {
+    padding: 0;
+}
+
+.gal-img img {
+    border-radious: 0px;
+}
+
 
 html {
   font-family: var(--ff-roboto);
   scroll-behavior: smooth;
-}
-
-body {
-  background: var(--bg-primary);
-  transition: var(--transition-1);
-  height: 200vh;
-}
-
-body.active {
-  overflow: hidden;
 }
 
 /*--- Repeated ---*/
@@ -150,30 +352,8 @@ body.active {
   padding-inline: 10px;
 }
 
-/**
-* texts
-**/
-.h1 {
-  font-size: var(--fs-1);
-  line-height: 1.2;
-  font-weight: 400;
-}
-.h2 {
-  font-size: var(--fs-2);
-}
-.h3 {
-  font-size: var(--fs-3);
-}
-.h4 {
-  font-size: var(--fs-5);
-  color: var(--color-primary);
-  font-family: var(--ff-poppins);
-  line-height: 1.2;
-}
 
-/**
-* 
-**/
+
 
 /*--- Header ---*/
 .header {
