--- a/style.css
+++ b/style.css
@@ -118,234 +118,20 @@ ion-icon {
   background: var(--color-primary);
   color: var(--bg-primary);
 }
-body {
-    margin: 0;
-    font-size: 104%;
-    background: #fff;
-    font-family: 'Raleway', sans-serif;
-    scroll-behavior: smooth;
-}
-
-body a {
-    text-decoration: none;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-}
-
-a:link {
-    color: #06004b;
-    background-color: transparent;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #ff4c4c;
-    text-decoration: none;
-}
-
-input[type="button"],
-input[type="submit"],
-input[type="text"],
-input[type="email"],
-input[type="search"] {
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-    letter-spacing: 1px;
-    font-weight: 600;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-p {
-    font-size: 0.9em;
-    color: #000000;
-    line-height: 1.9em;
-    letter-spacing: 1px;
-    margin-bottom: 0;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-
-.breadcrumb,
-ol {
-    margin-bottom: 0 !important;
-}
-
-/*--/banner --*/
-
-.main-banner {
-    background: url(../images/banner3.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-    background-size: cover;
-    position: relative;
-    min-height: 100vh;
-}
-
-.banner-info {
-    padding-top: 9em;
-}
-
-.lavi-logo a {
-    display: initial;
-    margin: 0;
-    letter-spacing: 1px;
-    color: #000000;
-    font-size: 1em;
-    font-weight: 700;
-    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
-    text-transform: uppercase;
-}
-.team-class{
-	text-align:center;
-}
-
-.portfolio-item {
-	margin-bottom: 25px;
-}
-.portfolio-item{
-	text-align:justify;
-}
-.indent1 {
-	padding-left:20px;
-}
-/*--//banner --*/
-/*--/content --*/
-img.admin {
-    border-radius: 100%;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    -ms-border-radius: 100%;
-    -o-border-radius: 100%;
-    background: #dff0f738;
-    padding: 10em;
-    margin-bottom: 2em;
-}
-
-.inner-vv-wrap h2,
-.head-vl {
-    color: #000000;
-    font-size: 1.4em;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
-    margin: 0em 0 1.5em 0;
-}
-
-.inner-vv-wrap h4 {
-    color: #000000;
-    font-size: 1em;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
-    margin: 0.5em 0 3em 0;
-}
-
-
-/*--//content --*/
-/*--/tab-content --*/
-.tab-main {
-    padding: 40px 0;
-    border: none;
-    background: transparent;
-    box-shadow: none;
-    width: 80%;
-    text-align: center;
-}
-
-.inner-vv-wrap {
-    margin: 0 auto;
-    width: 55%;
-    padding-top: 4em;
-    text-align: center;
-
-}
-
-.tab-main section {
-    display: none;
-}
-
-.tab-main input.vv-sm {
-    display: none;
-}
-
-
-
-.tab-main label {
-    display: inline-block;
-    padding: 10px 25px;
-    font-weight: 600;
-    text-align: center;
-    color: #595a5a;
-    border: 2px solid #ffffff47;
-    border-radius: 4px;
-    background: #fff;
-    margin: 0 2px;
-    font-size: 0.9em;
-    letter-spacing: 1px;
-    font-family: 'Raleway', sans-serif;
-}
-
-.tab-main span {
-    margin-right: 0.5em;
-}
-
-
-
-
-
-@media screen and (max-width: 800px) {
-    .tab-main label:before {
-        margin: 0;
-        font-size: 18px;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .tab-main label {
-        padding: 15px;
-    }
-}
-
-/*--//tab-content --*/
-/*-- /gallery --*/
-h4.sub-title.two {
-    color: #fd0;
-}
-
-.gal-img {
-    padding: 0;
-}
-
-.gal-img img {
-    border-radious: 0px;
-}
-
 
 html {
   font-family: var(--ff-roboto);
   scroll-behavior: smooth;
+}
+
+body {
+  background: var(--bg-primary);
+  transition: var(--transition-1);
+  height: 200vh;
+}
+
+body.active {
+  overflow: hidden;
 }
 
 /*--- Repeated ---*/
@@ -353,24 +139,44 @@ html {
   padding-inline: 10px;
 }
 
+/**
+* texts
+**/
+.h1 {
+  font-size: var(--fs-1);
+  line-height: 1.2;
+  font-weight: 400;
+}
+.h2 {
+  font-size: var(--fs-2);
+}
+.h3 {
+  font-size: var(--fs-3);
+}
+.h4 {
+  font-size: var(--fs-5);
+  color: var(--color-primary);
+  font-family: var(--ff-poppins);
+  line-height: 1.2;
+}
 
-
+/**
+* 
+**/
 
 /*--- Header ---*/
 .header {
-  padding-block: 20px;
-  position: centre;
-  top: 200;
-  left: 250;
+  padding-block: 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   transition: var(--transition-1);
-  z-index: 15;
-  color: MediumSeaGreen;
-  text-align:center;
+  z-index: 4;
 }
 
 .header.active {
-  padding-block: 20px;
+  padding-block: 12px;
   background: var(--bg-secondary);
   box-shadow: var(--shadow-1);
 }
@@ -379,7 +185,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 .header.active {
@@ -388,9 +194,9 @@ html {
 
 /*--- Logo ---*/
 .logo {
-  position: centre;
-  min-width: 200px;
-  z-index: 3;
+  position: relative;
+  min-width: 77px;
+  z-index: 2;
 }
 
 .logo a {
@@ -528,135 +334,7 @@ html {
   pointer-events: all;
   transform: translateY(0);
 }
-/*--/responsive--*/
-@media(max-width:1024px) {
-    .tab-main {
-        padding: 40px 0;
-        width: 90%;
-    }
-}
 
-@media(max-width:991px) {
-    .popup {
-        width: 40%;
-    }
-}
-
-@media(max-width:800px) {
-    .inner-vv-wrap {
-        margin: 0 auto;
-        width: 90%;
-        padding-top: 3em;
-        text-align: center;
-    }
-
-    .banner-info {
-        padding-top: 3.5em;
-    }
-}
-
-@media(max-width:768px) {
-    .tab-main {
-        padding: 40px 0;
-        width: 92%;
-    }
-}
-
-@media(max-width:640px) {
-    .popup {
-        width: 40%;
-    }
-
-    .tab-main {
-        padding: 40px 0;
-        width: 95%;
-    }
-
-    .tab-main label {
-        padding: 10px 18px;
-    }
-}
-
-@media(max-width:480px) {
-
-    .inner-vv-wrap h2,
-    .head-vl {
-        font-size: 1.2em;
-        letter-spacing: 2px;
-        margin: 0em 0 1em 0;
-    }
-
-    .inner-vv-wrap h4 {
-        font-size: 0.9em;
-        letter-spacing: 2px;
-        margin: 0.5em 0 2em 0;
-    }
-
-    .tab-main label {
-        padding: 10px 10px;
-    }
-
-    .tab-main span {
-        margin-right: 0.2em;
-    }
-}
-
-@media(max-width:414px) {
-    p {
-        font-size: 0.85em;
-
-    }
-
-    .lavi-logo a {
-        font-size: 0.9em;
-    }
-
-    .banner-info {
-        padding-top: 1.5em;
-    }
-
-    .tab-main {
-        padding: 22px 0;
-        width: 100%;
-    }
-
-    .tab-main label {
-        padding: 6px 7px;
-        font-size: 0.8em;
-    }
-
-    .contact-form textarea {
-        min-height: 8.5em;
-    }
-
-    img.admin {
-        padding: 0.3em;
-        margin-bottom: 1em;
-        width: 30%;
-    }
-
-    .inner-vv-wrap {
-        margin: 0 auto;
-        width: 90%;
-        padding-top: 2em;
-    }
-
-    form.contact-form {
-        margin-top: 2em;
-    }
-
-    .contact-form button.btn {
-        padding: 0.7em 2em;
-        font-size: 14px;
-        letter-spacing: 2px;
-    }
-}
-
-@media(max-width:384px) {}
-
-@media(max-width:375px) {}
-
-/*--//responsive--*/
 /** Responsive for larger than 550px screens **/
 @media (min-width: 550px) {
   .container {
@@ -727,4 +405,302 @@ html {
   .navbar-link::before {
     height: 2px;
   }
+}/
+
+
+
+
+  
+.team-class{
+	text-align:center;
 }
+
+.portfolio-item {
+	margin-bottom: 25px;
+}
+.portfolio-item{
+	text-align:justify;
+}
+.indent1 {
+	padding-left:20px;
+}
+
+/*--/content --*/
+
+
+.inner-vv-wrap h2,
+.head-vl {
+    color: #000000;
+    font-size: 1.4em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
+    margin: 0em 0 1.5em 0;
+}
+
+.inner-vv-wrap h4 {
+    color: #000000;
+    font-size: 1em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
+    margin: 0.5em 0 3em 0;
+}
+
+
+
+/*--/tab-content --*/
+.tab-main {
+    padding: 40px 0;
+    border: none;
+    background: transparent;
+    box-shadow: none;
+    width: 80%;
+    text-align: center;
+}
+
+.inner-vv-wrap {
+    margin: 0 auto;
+    width: 55%;
+    padding-top: 4em;
+    text-align: center;
+
+}
+
+.tab-main section {
+    display: none;
+}
+
+.tab-main input.vv-sm {
+    display: none;
+}
+
+
+
+.tab-main label {
+    display: inline-block;
+    padding: 10px 25px;
+    font-weight: 600;
+    text-align: center;
+    color: #595a5a;
+    border: 2px solid #ffffff47;
+    border-radius: 4px;
+    background: #fff;
+    margin: 0 2px;
+    font-size: 0.9em;
+    letter-spacing: 1px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.tab-main span {
+    margin-right: 0.5em;
+}
+
+
+
+
+
+
+/*--//tab-content --*/
+/*-- /gallery --*/
+h4.sub-title.two {
+    color: #fd0;
+}
+
+.gal-img {
+    padding: 0;
+}
+
+.gal-img img {
+    border-radious: 0px;
+}
+
+
+html {
+  font-family: var(--ff-roboto);
+  scroll-behavior: smooth;
+}
+
+/*--- Repeated ---*/
+.container {
+  padding-inline: 10px;
+}
+
+
+
+
+/*--- Header ---*/
+.header {
+  padding-block: 20px;
+  position: centre;
+  top: 200;
+  left: 250;
+  width: 100%;
+  transition: var(--transition-1);
+  z-index: 15;
+  color: MediumSeaGreen;
+  text-align:center;
+}
+
+.header.active {
+  padding-block: 20px;
+  background: var(--bg-secondary);
+  box-shadow: var(--shadow-1);
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.header.active {
+  background: var(--bg-primary);
+}
+
+/*--- Logo ---*/
+.logo {
+  position: centre;
+  min-width: 250px;
+  z-index: 5;
+}
+
+.logo a {
+  color: var(--color-primary);
+  font-family: var(--ff-saira-stencil-one);
+}
+
+.logo span {
+  display: inline-block;
+  color: var(--raw-seinna);
+  margin-left: 5px;
+}
+
+/*--- Menu ---*/
+.nav-btn {
+  position: relative;
+  z-index: 2;
+}
+
+.nav-btn.active {
+  transform: rotate(-45deg);
+}
+
+.nav-btn span {
+  width: 20px;
+  height: 2px;
+  background: var(--color-primary);
+  margin: 5px;
+  transition: var(--transition-1);
+}
+
+.nav-btn :is(.one, .two, .three) {
+  width: 20px;
+}
+
+.nav-btn.active .one {
+  transform: rotate(90deg) translateX(5px);
+}
+
+.nav-btn.active .three {
+  transform: rotate(90deg) translateX(-5px);
+}
+
+.nav-btn.active :is(.two) {
+  width: 20px;
+}
+
+.navbar {
+  display: none;
+}
+
+/*--- Navbar ---*/
+.navbar {
+  position: fixed;
+  background: var(--bg-secondary);
+  top: 100%;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  visibility: hidden;
+  transition: 0.75s cubic-bezier(0.71, 0.01, 0.24, 0.99);
+  z-index: 1;
+}
+
+.navbar.active {
+  top: 0;
+  visibility: visible;
+}
+
+.navbar-list > li {
+  margin-block: 20px;
+  padding-inline: 50px;
+  overflow: hidden;
+}
+
+.navbar-link {
+  position: relative;
+  width: max-content;
+  margin-inline: auto;
+  color: var(--color-primary);
+  font-family: var(--ff-poppins);
+  font-size: var(--fs-1);
+  padding: 10px;
+  transform: translateY(50px);
+  transition: 0.75s cubic-bezier(0.68, -0.55, 0.27, 2);
+}
+
+.navbar.active .navbar-link {
+  transform: translateY(0);
+}
+
+.navbar-link::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  height: 5px;
+  width: 0;
+  background: var(--raw-seinna);
+  transition: var(--transition-1);
+}
+
+.navbar-link:is(:hover, :focus) {
+  text-decoration: underline;
+  text-decoration-color: var(--raw-seinna);
+  font-family: var(--ff-poppins);
+}
+
+/** Go top **/
+.go-top {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  width: 45px;
+  height: 45px;
+  display: grid;
+  place-items: center;
+  font-size: 20px;
+  color: var(--color-primary);
+  border: 2px solid var(--color-primary);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(10px);
+  transition: var(--transition-1);
+  z-index: 2;
+}
+
+.go-top.active {
+  opacity: 1;
+  pointer-events: all;
+  transform: translateY(0);
+}
+
+
+
