--- a/style.css
+++ b/style.css
@@ -251,13 +251,14 @@ img.admin {
 }
 /*--- Header ---*/
 .header {
-  padding-block: 15px;
-  position: fixed;
-  top: 0;
-  left: 0;
+  padding-block: 25px;
+  position: centre;
+  top: 100;
+  left: 150;
   width: 100%;
   transition: var(--transition-1);
-  z-index: 4;
+  z-index: 5;
+ color: MediumSeaGreen
 }
 
 .header.active {
