--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ img.admin {
     margin-right: 0.5em;
 }
 
-/*----*
+
 .tab-main label:before {
     font-family: fontawesome;
     font-weight: normal;
@@ -370,18 +370,6 @@ img.admin {
     display: block;
 }
 
-@media screen and (max-width: 800px) {
-    .tab-main label:before {
-        margin: 0;
-        font-size: 18px;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .tab-main label {
-        padding: 15px;
-    }
-}
 
 /*--- Navbar ---*/
 .navbar {
@@ -470,34 +458,135 @@ img.admin {
   transform: translateY(0);
 }
 
-/** Responsive for larger than 550px screens **/
-@media (min-width: 550px) {
-  .container {
-    max-width: 550px;
-    margin-inline: auto;
-  }
-  .section-title {
-    max-width: 380px;
-  }
+/*--/responsive--*/
+@media(max-width:1024px) {
+    .tab-main {
+        padding: 40px 0;
+        width: 90%;
+    }
 }
 
-/** Responsive for larger than 768px screens **/
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-
-  .section-title {
-    max-width: 430;
-  }
+@media(max-width:991px) {
+    .popup {
+        width: 40%;
+    }
 }
 
-/** Responsive for larger than 992px screens **/
-@media (min-width: 992px) {
-  :root {
-    --fs-2: 3rem;
-    --section-padding: 100px;
-  }
+@media(max-width:800px) {
+    .inner-vv-wrap {
+        margin: 0 auto;
+        width: 90%;
+        padding-top: 3em;
+        text-align: center;
+    }
+
+    .banner-info {
+        padding-top: 3.5em;
+    }
+}
+
+@media(max-width:768px) {
+    .tab-main {
+        padding: 40px 0;
+        width: 92%;
+    }
+}
+
+@media(max-width:640px) {
+    .popup {
+        width: 40%;
+    }
+
+    .tab-main {
+        padding: 40px 0;
+        width: 95%;
+    }
+
+    .tab-main label {
+        padding: 10px 18px;
+    }
+}
+
+@media(max-width:480px) {
+
+    .inner-vv-wrap h2,
+    .head-vl {
+        font-size: 1.2em;
+        letter-spacing: 2px;
+        margin: 0em 0 1em 0;
+    }
+
+    .inner-vv-wrap h4 {
+        font-size: 0.9em;
+        letter-spacing: 2px;
+        margin: 0.5em 0 2em 0;
+    }
+
+    .tab-main label {
+        padding: 10px 10px;
+    }
+
+    .tab-main span {
+        margin-right: 0.2em;
+    }
+}
+
+@media(max-width:414px) {
+    p {
+        font-size: 0.85em;
+
+    }
+
+    .lavi-logo a {
+        font-size: 0.9em;
+    }
+
+    .banner-info {
+        padding-top: 1.5em;
+    }
+
+    .tab-main {
+        padding: 22px 0;
+        width: 100%;
+    }
+
+    .tab-main label {
+        padding: 6px 7px;
+        font-size: 0.8em;
+    }
+
+    .contact-form textarea {
+        min-height: 8.5em;
+    }
+
+    img.admin {
+        padding: 0.3em;
+        margin-bottom: 1em;
+        width: 30%;
+    }
+
+    .inner-vv-wrap {
+        margin: 0 auto;
+        width: 90%;
+        padding-top: 2em;
+    }
+
+    form.contact-form {
+        margin-top: 2em;
+    }
+
+    .contact-form button.btn {
+        padding: 0.7em 2em;
+        font-size: 14px;
+        letter-spacing: 2px;
+    }
+}
+
+@media(max-width:384px) {}
+
+@media(max-width:375px) {}
+
+/*--//responsive--*/
 
   .container {
     max-width: 980px;
@@ -509,38 +598,7 @@ img.admin {
     padding-left: 40px;
   }
 
-  .header {
-    padding-block: 30px;
-  }
-  .header.active {
-    padding-block: 15px;
-  }
-  .nav-btn {
-    display: none;
-  }
-  .navbar {
-    all: unset;
-  }
-  .navbar-link {
-    transform: translateY(0);
-    font-size: unset;
-    padding-inline: 5px;
-  }
-  .navbar-list > li {
-    margin: 0;
-    padding: 0;
-    overflow: visible;
-  }
-  .navbar-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-  .navbar-link::before {
-    height: 2px;
-  }
-}/
+  
 
 .team-class{
 	text-align:center;
